# ollama-bench

./: .gitignore  CLAUDE.md  LICENSE  RANKING.md  RANKING_HISTORY.md  README.md  pyproject.toml  results_current_models_bug_finding_20260708.md  results_current_models_pdf_extract_20260708.md  results_current_models_pdf_ocr_20260708.md  results_current_models_strip_deep_20260708.md  results_current_models_tool_call_20260708.md  results_pdf_ocr_unlimited_20260708.md  results_wiring_validation_20260709.md
.github/workflows/: test.yml
.memory-bank/: CONTEXT.md  MEMORY.md  REFERENCE.md  activeContext.md  agent-sessions.md  currentTask.md  dead-ends.md  decisions.graph.jsonl  progress.md  systemPatterns.md
.memory-bank/control-plane/: current-objective.json  evidence.jsonl  index.json
.playwright-mcp/: page-2026-07-08T18-34-10-713Z.yml  page-2026-07-08T18-34-46-668Z.yml  page-2026-07-08T18-35-23-529Z.yml  page-2026-07-08T18-36-11-712Z.yml  page-2026-07-08T18-37-04-486Z.yml  page-2026-07-08T18-37-52-000Z.yml
scripts/: compute_combined_top5.py  compute_top5.py  run_pipeline.sh  tie_winners.py
tests/: test_browser_tool.py  test_bug_finding.py  test_canonical_tasks.py  test_classification.py  test_config_drift.py  test_deep.py  test_embedding.py  test_embedding_retrieval.py  test_judge.py  test_layout.py  test_leak_coverage.py  test_lfm_variant.py  test_list.py  test_multi_domain.py  test_ollama.py  test_paths.py  test_pdf_extract.py  test_pdf_ocr.py  test_prompt_budgets.py  test_report.py  test_rerank.py  test_score_saturation.py  test_scorer.py  test_smoke.py  test_tie_break.py  test_tool_call.py  test_tsv_schema.py
(+530 files in other folders)
