[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ollama-bench"
version = "0.1.0"
description = "Local Ollama model evaluation suite with leak gating, multi-prompt scoring, and tie-break re-benching."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "heldigard" }]
keywords = ["ollama", "llm", "benchmark", "evaluation", "local-models"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6"]

[project.scripts]
ollama-bench = "ollama_bench.cli:main"

[project.urls]
Homepage = "https://github.com/heldigard/ollama-bench"
Repository = "https://github.com/heldigard/ollama-bench"
Issues = "https://github.com/heldigard/ollama-bench/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter; cohesion > wrapping

[tool.hatch.build.targets.wheel]
packages = ["src/ollama_bench"]